Fix align

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 	margin-bottom: 32px;
 	text-align: center;
 }
-footer {
+#footer {
 	margin-top: 64px;
 	text-align: center;
 }
